--- a/MedData/wear/src/main/res/layout/toolbar.xml
+++ b/MedData/wear/src/main/res/layout/toolbar.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.wearable.view.BoxInsetLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">-->
+
 
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
@@ -13,6 +9,7 @@
     android:background="?attr/colorPrimary"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+   app:layout_box="all"
 
 
     >
@@ -21,5 +18,6 @@
 
 
 </android.support.v7.widget.Toolbar>
+
 <!--
 </android.support.wearable.view.BoxInsetLayout>-->
