--- a/MedData/wear/src/main/res/layout/toolbar_custom_view.xml
+++ b/MedData/wear/src/main/res/layout/toolbar_custom_view.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout
+<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/back"
+        android:layout_margin="1dp"
+        android:src="@drawable/back_icon"
+        android:layout_alignParentStart="true" />
 
 <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:text="Patient List"
     android:id="@+id/title"
-   android:layout_gravity="center"
     android:gravity="center"
 
     />
 
-</LinearLayout>
+</RelativeLayout>
