--- a/MedData/wear/src/main/res/values/dimens.xml
+++ b/MedData/wear/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
 
     <dimen name="small_circle_radius">16dp</dimen>
     <dimen name="big_circle_radius">20dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
