--- a/MedData/wear/src/main/res/layout/worklist_wearable_list_layout.xml
+++ b/MedData/wear/src/main/res/layout/worklist_wearable_list_layout.xml
@@ -28,12 +28,26 @@ app:layout_box="all"
 <include
     android:id="@+id/work_list_header"
     layout="@layout/work_list_header"
-    android:layout_alignParentTop="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+
     ></include>
 
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/selectall"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:tint="@android:color/white"
+        android:id="@+id/fab"
+        android:elevation="1dp"
+        android:background="@drawable/ripple"
+        android:stateListAnimator="@anim/fab_anim"
+        />
 
 </RelativeLayout>
 </android.support.wearable.view.BoxInsetLayout>
