--- a/MedData/wear/src/main/res/values/colors.xml
+++ b/MedData/wear/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="light_blue">#03A9F4</color>
-    <color name="colorPrimary">#F50057</color>
+    <color name="colorPrimary">#f27a14</color>
     <color name="colorPrimaryDark">#C51162</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
