--- a/MedData/wear/src/main/res/values/dimens.xml
+++ b/MedData/wear/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="small_circle_radius">16dp</dimen>
     <dimen name="big_circle_radius">20dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="end_z">1dp</dimen>
+    <dimen name="start_z">8dp</dimen>
 </resources>
