--- a/MedData/wear/src/main/res/layout/work_list_item.xml
+++ b/MedData/wear/src/main/res/layout/work_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:gravity="center_vertical"
-    android:paddingStart="20dp"
+    android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:orientation="horizontal">
 
@@ -45,6 +45,7 @@
     android:layout_centerInParent="true"
     android:textSize="10dp"
     android:text=""
+android:paddingRight="10dp"
     android:id="@+id/room"
     android:textColor="#000000"
     android:alpha="0.6"/>
