--- a/MedData/wear/src/main/res/layout/handoff_wearable_list_layout.xml
+++ b/MedData/wear/src/main/res/layout/handoff_wearable_list_layout.xml
@@ -18,19 +18,18 @@ app:layout_box="all"
 >
 
 <android.support.wearable.view.WearableListView
-    android:id="@+id/reminder_List"
+    android:id="@+id/handoff_List"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:scrollbars="none"
-
     android:dividerHeight="0dp">
 </android.support.wearable.view.WearableListView>
 <include
-    android:id="@+id/reminder_header"
-    layout="@layout/reminder_list_header"
-    android:layout_alignParentTop="true"
+    android:id="@+id/handoff_list_header"
+    layout="@layout/handoff_list_header"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+
 
     ></include>
 
