--- a/MedData/wear/src/main/main/res/layout/account_details_form.xml
+++ b/MedData/wear/src/main/main/res/layout/account_details_form.xml
@@ -1,34 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-   <TextView
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/ic_launcher"
+
+         />
+    <include
+        android:id="@+id/mandatory_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageView"
+        layout="@layout/mandatory_text_field"
+        ></include>
+
+<TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/phy_name"
-    android:text="Veeresh"
+    android:id="@+id/admin_label"
+    android:textColor="#000000"
+    android:text="Admin"
     android:textSize="10dp"
-    android:layout_margin="16dp"
-    android:textColor="#000000"/>
+    android:layout_marginLeft="10dp"
+    android:layout_below="@+id/mandatory_name"
+    android:layout_toEndOf="@+id/imageView" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/admin_label2"
+        android:textColor="#000000"
+        android:layout_marginLeft="10dp"
+        android:text="Admin"
+        android:textSize="10dp"
+        android:layout_below="@+id/admin_label"
+        android:layout_toEndOf="@+id/imageView" />
+<include
+    android:id="@+id/email_layout"
+    layout="@layout/email_mandatory_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 
-   <include android:id="@+id/location_layout"
+    android:layout_below="@+id/admin_label2"
+    ></include>
+    <include android:id="@+id/location_layout"
         layout="@layout/spinner_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_below="@+id/phy_name"
+
+        android:layout_below="@+id/email_layout"
         ></include>
 
-    <Button
-        android:layout_width="match_parent"
+    <include android:id="@+id/default_location_layout"
+        layout="@layout/default_location_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
+
         android:layout_below="@+id/location_layout"
-        android:layout_margin="16dp"
-        android:text="save"
-        android:textSize="10dp"
-        android:id="@+id/save_btn"/>
-
-
+        ></include>
 </RelativeLayout>
 
     <!--<TextView
