--- a/MedData/wear/src/main/main/res/layout/mandatory_label_text_field.xml
+++ b/MedData/wear/src/main/main/res/layout/mandatory_label_text_field.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mandatory_label"
+        android:text = "Mandatory Label"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentLeft="true"/>
+<RelativeLayout
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:id="@+id/mandatory_text_field_layout"
+    android:layout_toRightOf="@+id/mandatory_label">
+
+
 
     <ImageView
         android:layout_width="wrap_content"
@@ -8,7 +25,6 @@
         android:id="@+id/imageView5"
         android:src="@drawable/ic_mf_indicator_input_mandatory"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
 
         />
 
@@ -18,8 +34,10 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:ems="10"
+
         android:id="@+id/editText2"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/imageView5"
          />
+</RelativeLayout>
 </RelativeLayout>
