--- a/MedData/wear/src/main/main/res/layout/work_list_item.xml
+++ b/MedData/wear/src/main/main/res/layout/work_list_item.xml
@@ -11,21 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:gravity="center_vertical"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/hospitial_name"
+            android:id="@+id/day"
             android:textSize="10dp"
             android:text=""
-            android:textColor="#FF0000"
+            android:textColor="#000000"
             android:alpha="0.6"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/date"
-            android:visibility="gone"
             android:text=""
             android:textColor="#000000"
             android:textSize="10dp"
@@ -36,7 +34,6 @@
             android:layout_height="wrap_content"
             android:textSize="10dp"
             android:id="@+id/physician"
-            android:visibility="gone"
             android:text=""
             android:textColor="#000000"
             android:alpha="0.6"/>
@@ -71,7 +68,6 @@ android:paddingRight="10dp"
             android:layout_height="wrap_content"
             android:textSize="10dp"
             android:id="@+id/billing"
-            android:visibility="gone"
             android:text=""
             android:textColor="#000000"
             android:alpha="0.6"/>
@@ -80,10 +76,9 @@ android:paddingRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10dp"
-            android:id="@+id/day"
+            android:id="@+id/hospitial_name"
             android:text=""
             android:textColor="#FF0000"
-            android:visibility="gone"
             android:alpha="0.6"/>
 
     </LinearLayout>
