--- a/MedData/wear/src/main/res/layout/account_details_form.xml
+++ b/MedData/wear/src/main/res/layout/account_details_form.xml
@@ -7,24 +7,29 @@
     android:id="@+id/phy_name"
     android:text="Veeresh"
     android:textSize="10dp"
-    android:layout_margin="16dp"
+       android:layout_margin="5dp"
+       android:layout_centerHorizontal="true"
+    android:gravity="center_vertical"
     android:textColor="#000000"/>
 
    <include android:id="@+id/location_layout"
         layout="@layout/spinner_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="10dp"
         android:layout_below="@+id/phy_name"
+       android:layout_centerHorizontal="true"
         ></include>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_below="@+id/location_layout"
-        android:layout_margin="16dp"
+        android:layout_margin="10dp"
         android:text="save"
+        android:layout_centerHorizontal="true"
         android:textSize="10dp"
         android:id="@+id/save_btn"/>
 
