--- a/MedData/wear/src/main/res/layout/handoff_wearable_list_layout.xml
+++ b/MedData/wear/src/main/res/layout/handoff_wearable_list_layout.xml
@@ -16,8 +16,21 @@ android:background="#FFFFFF"
 android:padding="5dp"
 app:layout_box="all"
 >
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/back_float_icon"
+        android:tint="@android:color/white"
+        android:id="@+id/fab_back"
+        android:elevation="1dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/ripple"
+        android:stateListAnimator="@anim/fab_anim"
+        android:layout_alignParentLeft="true"
+        />
 
 <android.support.wearable.view.WearableListView
+    android:layout_below="@+id/fab_back"
     android:id="@+id/handoff_List"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
