--- a/MedData/wear/src/main/res/layout/spinner_layout.xml
+++ b/MedData/wear/src/main/res/layout/spinner_layout.xml
@@ -20,6 +20,7 @@
         android:layout_toRightOf="@id/image_location"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
+        android:visibility="gone"
         />
 
     <ImageView
@@ -29,10 +30,12 @@
         android:layout_toRightOf="@id/textView3"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
+        android:visibility="gone"
         android:src="@drawable/ic_mf_indicator_input_mandatory" />
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageView4"
+        android:layout_toRightOf="@id/image_location"
+        android:id="@+id/location_spinner"
         android:entries="@array/country_arrays"></Spinner>
 </RelativeLayout>
