--- a/MedData/wear/src/main/res/layout/fragment_hands_off_patient_search_result.xml
+++ b/MedData/wear/src/main/res/layout/fragment_hands_off_patient_search_result.xml
@@ -16,11 +16,23 @@
         android:padding="5dp"
         app:layout_box="all"
         >
-
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/back_float_icon"
+            android:tint="@android:color/white"
+            android:id="@+id/fab_back"
+            android:elevation="1dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ripple"
+            android:stateListAnimator="@anim/fab_anim"
+            android:layout_alignParentLeft="true"
+            />
         <android.support.wearable.view.WearableListView
             android:id="@+id/handoff_search_result_List"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_below="@+id/fab_back"
             android:scrollbars="none"
             android:dividerHeight="0dp">
         </android.support.wearable.view.WearableListView>
