--- a/MedData/wear/src/main/res/layout/handoffs_current_patients_layout.xml
+++ b/MedData/wear/src/main/res/layout/handoffs_current_patients_layout.xml
@@ -5,6 +5,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
  >
      <ImageButton
         android:layout_width="40dp"
@@ -30,7 +31,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/from_date_val"
         android:textSize="8dp"
-        android:hint="Select" />
+        android:text="Select"
+        android:textColor="#999999"/>
 
     <TextView
         android:layout_width="wrap_content"
