Watch face integrated
updated with watch face integration

--- a/MedData/wear/src/main/res/values/dimens.xml
+++ b/MedData/wear/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="end_z">1dp</dimen>
     <dimen name="start_z">8dp</dimen>
+    <dimen name="digital_text_size">40dp</dimen>
+    <dimen name="digital_text_size_round">45dp</dimen>
+    <dimen name="digital_x_offset">15dp</dimen>
+    <dimen name="digital_x_offset_round">25dp</dimen>
+    <dimen name="digital_y_offset">90dp</dimen>
 </resources>
