--- a/MedData/wear/src/main/res/layout/watchface.xml
+++ b/MedData/wear/src/main/res/layout/watchface.xml
@@ -144,4 +144,31 @@
         android:singleLine="true"
         android:ellipsize="none"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10"
+        android:id="@+id/worklist"
+        android:layout_below="@+id/reminder"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="4dp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WORKLIST"
+        android:id="@+id/worklist_label"
+        android:layout_alignBaseline="@+id/worklist"
+        android:layout_toEndOf="@+id/worklist"
+        android:textColor="#aaa"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:singleLine="true"
+        android:ellipsize="none"
+        />
 </RelativeLayout>
