updated with face changes
(1) Updated Face UI (2) Patient List (3) Patient Details (4) Account
Details Title (5)ReminderList PAartial

--- a/MedData/wear/src/main/res/layout/reminder_list_item.xml
+++ b/MedData/wear/src/main/res/layout/reminder_list_item.xml
@@ -86,7 +86,8 @@
             android:id="@+id/detail"
             android:alpha="0.6"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
 
 
 
