--- a/MedData/wear/src/main/res/layout/watchface.xml
+++ b/MedData/wear/src/main/res/layout/watchface.xml
@@ -3,43 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
+    android:background="#87CEFA"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MAY"
-        android:id="@+id/month"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#aaa"
-        android:textStyle="bold"
-        android:textSize="10dp"
-        android:textAllCaps="true"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="14"
-        android:id="@+id/date"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/month"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:textSize="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="THU"
-        android:id="@+id/day"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/date"
-        android:textColor="#aaa"
-        android:textStyle="bold"
-        android:textSize="10dp"
-        android:textAllCaps="true"
-        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,128 +13,76 @@
         android:text="18"
         android:id="@+id/hour"
         android:layout_below="@+id/month"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
         android:textColor="#fff"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOURS"
-        android:id="@+id/hour_label"
-        android:layout_alignBaseline="@+id/hour"
-        android:layout_toEndOf="@+id/hour"
-        android:textColor="#aaa"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:singleLine="true"
-        android:ellipsize="none"
+        android:textStyle="normal"
+        android:textSize="10dp"
+
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="53"
-        android:id="@+id/minute"
-        android:layout_below="@+id/hour"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MINUTES"
-        android:id="@+id/minute_label"
-        android:layout_alignBaseline="@+id/minute"
-        android:layout_toEndOf="@+id/minute"
-        android:textColor="#aaa"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:singleLine="true"
-        android:ellipsize="none"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="27"
-        android:id="@+id/second"
-        android:layout_below="@+id/minute"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SECONDS"
-        android:id="@+id/second_label"
-        android:layout_alignBaseline="@+id/second"
-        android:layout_toEndOf="@+id/second"
-        android:textColor="#aaa"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:singleLine="true"
-        android:ellipsize="none"
-        />
+
+
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
         android:id="@+id/reminder"
-        android:layout_below="@+id/second"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="15dp"
+        android:layout_below="@+id/hour"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="REMINDERS"
+        android:text="\tREMINDERS"
         android:id="@+id/reminder_label"
-        android:layout_alignBaseline="@+id/reminder"
-        android:layout_toEndOf="@+id/reminder"
-        android:textColor="#aaa"
+        android:textColor="#fff"
         android:textStyle="bold"
         android:textSize="20dp"
         android:singleLine="true"
         android:ellipsize="none"
+        android:layout_toRightOf="@+id/reminder"
+        android:layout_below="@+id/hour"
+        android:layout_marginTop="16dp"
         />
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
         android:id="@+id/worklist"
-        android:layout_below="@+id/reminder"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="4dp"
         android:textColor="#fff"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:layout_below="@+id/reminder"
+        android:layout_marginLeft="32dp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WORKLIST"
+        android:text="\tWORKLIST"
         android:id="@+id/worklist_label"
-        android:layout_alignBaseline="@+id/worklist"
-        android:layout_toEndOf="@+id/worklist"
-        android:textColor="#aaa"
+        android:textColor="#fff"
         android:textStyle="bold"
         android:textSize="20dp"
         android:singleLine="true"
         android:ellipsize="none"
+        android:layout_marginTop="4dp"
+        android:layout_toRightOf="@+id/worklist"
+        android:layout_below="@+id/reminder"
         />
+
 </RelativeLayout>
