--- a/MedData/wear/src/main/res/layout/handoffs_current_patients_layout.xml
+++ b/MedData/wear/src/main/res/layout/handoffs_current_patients_layout.xml
@@ -11,13 +11,13 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/back_float_icon"
-        android:tint="@android:color/white"
         android:id="@+id/fab_back"
         android:elevation="1dp"
         android:background="@drawable/ripple"
-        android:stateListAnimator="@anim/fab_anim"
-        />
-
+           />
+    <!--android:tint="@android:color/white"
+         android:stateListAnimator="@anim/fab_anim"
+         -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
