--- a/MedData/wear/src/main/res/layout/mandatory_label_spinner.xml
+++ b/MedData/wear/src/main/res/layout/mandatory_label_spinner.xml
@@ -31,7 +31,7 @@
         android:visibility="invisible"
         android:src="@drawable/ic_mf_indicator_input_mandatory" />
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/mand_spinner"
         android:layout_toRightOf="@+id/imageView4"
