--- a/MedData/wear/src/main/res/layout/toolbar_custom_view.xml
+++ b/MedData/wear/src/main/res/layout/toolbar_custom_view.xml
@@ -3,7 +3,7 @@
 
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
+android:layout_width="match_parent"
 android:layout_height="wrap_content">
     <ImageView
         android:layout_width="20dp"
@@ -15,11 +15,31 @@ android:layout_height="wrap_content">
 
 <TextView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:text="Patient List"
     android:id="@+id/title"
     android:gravity="center"
 
     />
 
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/right_icon"
+        android:layout_margin="1dp"
+        android:src="@drawable/back_icon"
+        android:visibility="gone"
+        android:layout_alignParentEnd="true"/>
+
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="NOTES"
+    android:id="@+id/notes"
+    android:layout_alignParentRight="true"
+    android:visibility="visible"
+   android:layout_centerVertical="true"
+   
+    ></TextView>
 </RelativeLayout>
