--- a/MedData/wear/src/main/res/layout/worklist_details1.xml
+++ b/MedData/wear/src/main/res/layout/worklist_details1.xml
@@ -19,7 +19,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:layout_marginTop="16dp"
-        android:background="@color/light_blue"/>
+        android:background="@color/light_blue"
+        android:visibility="gone"/>
 
     <TextView
     android:layout_width="match_parent"
