--- a/MedData/wear/src/main/res/layout/reminder_list_item1.xml
+++ b/MedData/wear/src/main/res/layout/reminder_list_item1.xml
@@ -35,7 +35,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/day"
         android:textSize="10dp"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/room"
+        android:layout_alignParentRight="true"
+        android:paddingRight="10dp"
         android:text=""
         android:textColor="#000000"
         android:alpha="0.6"/>
