--- a/MedData/wear/src/main/res/layout/worklist_details1.xml
+++ b/MedData/wear/src/main/res/layout/worklist_details1.xml
@@ -80,6 +80,28 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
        android:layout_below="@+id/billing_layout"></include>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/disposition_layout">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/save_details"
+            android:gravity="center"
+            android:text="Save"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/cancel_details"
+            android:text="Cancel"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
      <include
         android:id="@+id/gender_layout"
         layout="@layout/label_spinner"
