Encounter graphs JSON Parsing  done

--- a/MedData/wear/src/main/res/layout/fragment_encounters.xml
+++ b/MedData/wear/src/main/res/layout/fragment_encounters.xml
@@ -4,6 +4,17 @@
     android:layout_height="match_parent"
     android:id="@+id/barChart_container"
     tools:context="com.android.meddata.Fragments.EncountersFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/parent_layout">
+<Spinner
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/encounter_years">
 
+</Spinner>
+    </LinearLayout>
 
 </FrameLayout>
